-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 18, 19
-
Component/s: hotspot
-
b30
-
x86
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8289627 | 20 | Vladimir Ivanov | P3 | Resolved | Fixed | b05 |
| JDK-8291376 | 19.0.2 | Vladimir Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8291213 | 19.0.1 | Vladimir Ivanov | P3 | Resolved | Fixed | b04 |
While benchmarking AVX related tests on x86 server machines, it was observed that the test throughput of the release build is ~35x slower than that of the fastdebug build. A sample test case named TestShortRShift.java is also attached.
Preliminarily performance analysis revealed that the fastdebug version is running AVX instructions whereas the debug version is falling back to the scalar instruction.
--------------------------------------------------------------------------
Below we list the main function that is being tested in TestShortRShift.java
public static void mainTest(long numIterations) {
while (numIterations > 0) {
for (int i = 0; i < BUFFER_SIZE; i++) {
// Code below would be run using x86 AVX instructions
outputBuffer[i] = (short)(inputBuffer[i] >> 3);
}
numIterations--;
}
}
Preliminarily performance analysis revealed that the fastdebug version is running AVX instructions whereas the debug version is falling back to the scalar instruction.
--------------------------------------------------------------------------
Below we list the main function that is being tested in TestShortRShift.java
public static void mainTest(long numIterations) {
while (numIterations > 0) {
for (int i = 0; i < BUFFER_SIZE; i++) {
// Code below would be run using x86 AVX instructions
outputBuffer[i] = (short)(inputBuffer[i] >> 3);
}
numIterations--;
}
}
- backported by
-
JDK-8289627 C2: Loop opts are missing during OSR compilation
-
- Resolved
-
-
JDK-8291213 C2: Loop opts are missing during OSR compilation
-
- Resolved
-
-
JDK-8291376 C2: Loop opts are missing during OSR compilation
-
- Resolved
-
- causes
-
JDK-8376219 C2: assert(false) failed: bad AD file
-
- Open
-
-
JDK-8364757 Missing Store nodes caused by bad wiring in PhaseIdealLoop::insert_post_loop
-
- Resolved
-
- relates to
-
JDK-8312043 Regression ~3% in jvm2008 Compress in 19-b30 aarch64 only
-
- Open
-
-
JDK-8272330 C2: Cleanup profile counter scaling
-
- Resolved
-
(2 relates to, 2 links to)