8280320: C2: Loop opts are missing during OSR compilation